--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: This package provides an interface to the 'samtools',
 URL: http://bioconductor.org/packages/release/bioc/html/Rsamtools.html
 License: Artistic-2.0 | file LICENSE
 LazyLoad: yes
-Depends: methods, S4Vectors (>= 0.7.1), IRanges (>= 2.3.7),
+Depends: R (>= 3.2.1), methods, S4Vectors (>= 0.7.1), IRanges (>= 2.3.7),
         GenomeInfoDb (>= 1.1.3), GenomicRanges (>= 1.21.6),
         XVector (>= 0.9.1), Biostrings (>= 2.37.1)
 Imports: utils, BiocGenerics (>= 0.1.3), zlibbioc, bitops, BiocParallel
